[package]
name = "axum_live_coding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.6", features = ["headers"]}

tokio = {version = "1.25.0", features = ["full"]}

serde = {version = "1.0.152", features = ["derive"]}

jsonwebtoken = "8.2.0"