[package]
name = "kv_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.6"
tokio = { version = "1.25.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
anyhow = "1.0.69"
dashmap = "5.4.0"
tokio-util = {version = "0.7.7", features = ["codec"]}
futures = "0.3.26"

[build-dependencies]
prost-build = "0.11.6"