[package]
name = "prost_live_coding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.6"
anyhow = "1.0.69"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"

[build-dependencies]
prost-build = "0.11.6"